--- a/app/globals.css
+++ b/app/globals.css
@@ -19,8 +19,16 @@
   }
 }
 
+
 body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+/* @variant dark {
+  body {
+    background: #000000;
+    color: #ffffff;
+  }
+} */
